<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_calibration">Abort Calibration</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">iLevel</string>
    <string name="auto_cal_body">If this is a re-calibration (system was already used)be aware that starting this procedure will lose all previously saved height information.Measure and notefender measurements of current heights before starting this procedure if desired.</string>
    <string name="auto_cal_sensor_title">Automatic Calibration w/Less Than 4 Sensors</string>
    <string name="automatic_calibration">Automatic Calibration</string>
    <string name="automatic_calibration_msg">Maximum height will be determined by your mechanical suspension limits during this procedure.</string>
    <string name="automatic_calibration_next_msg">If this is a re-calibration (system was already used) be aware that starting this procedure will lose all previously saved height information. Measure and note fender measurements of current heights before starting this procedure if desired.</string>
    <string name="automatic_calibration_warning">WARNING : Maximum tank pressure will be applied to your Air Springs to find the maximum suspension travel. Damage may be caused to suspensions without proper limiting means.</string>
    <string name="automatic_calibration_warning_next">Calibration will be performed based on your CURRENT Tank Pressure setting. If the Tank Pressure setting is changed in the future you must re-calibrate the system. You can change this setting by using : \10Menu &gt; Setting &gt; Tank Pressure Mode</string>
    <string name="calibration">Calibration</string>
    <string name="calibration_complete">Calibration Complete !</string>
    <string name="calibration_complete_msg">Your positions are now saved as follows : \10 1. Position 1 = 10% of total travel \10 2. Position 2 = 50% of total travel \10 3. Position 3 = 90% of total travel \10 You can Re-save these Position to your preference by using Menu &gt; Save Heights.</string>
    <string name="calibration_in_progress">Calibration In Progress</string>
    <string name="calibration_in_progress_msg">This process requires no user interaction and should take no more than 15 minutes depending on the size of your Compressor(s) and Tank(s)</string>
    <string name="calibration_msg">Your system must be calibrated to learn your vehicle\'s characteristics before the automatic leveling features can be used. This process should be repeated if any system components are changed or replaced in the future. Choose calibration type below:</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="error_11_detail_discription">1. Veryfy wiring and connection to pressure sensor.\10 2.Check Pressure Sensor for failure.</string>
    <string name="error_11_discription">The pressure sensor is not reading.</string>
    <string name="error_11_pressure_senser">Pressure Sensor Warning!</string>
    <string name="error_1_detail_discription">1. Check Compressor fuse F2.\10 2. Verify Compressor circuit wiring connections.\10 3. Check for Compressor relay failure.\10 4. Verify Compressor plumbing connections.\10 5. Verify ALL extra ports are plugged in tank system.\10 6. Check for Compressor failure.\10 7. Check for Pressure Sensor failure.</string>
    <string name="error_1_discription">Tank pressure is not increasing after the ECU turns the Compressor(s) ON.</string>
    <string name="error_1_tank_pressure_warning">Tank Pressure Warning</string>
    <string name="error_2_detail_discription" />
    <string name="error_2_discription" />
    <string name="error_2_volve_operation_warning">Valve Operation Warning</string>
    <string name="error_67_detail_discription">1. Use a volt-meter to test voltage across your battery posts with vehicle running.\102. If measured voltage is greater than 16.0V, repair your vehicle alternator/regulator.\103. If measured voltage is normal (less than 14.7V), improve your e-Level ECU ground location.</string>
    <string name="error_67_discription">Vehicle System Voltage is ABOVE 16.0V. Prolonged usage in this state may cause damage to system components.</string>
    <string name="error_67_high_voltage">High Voltage Warning !</string>
    <string name="error_68_detail_discription">1. Use a volt-meter to test voltage across your battery posts with vehicle running.\102. If measured voltage is greater than 13.0V, repair your vehicle alternator/regulator.\103. If measured voltage is normal (more than 13.0V), contact AccuAir.</string>
    <string name="error_68_discription">Vehicle System Voltage is BELOW 10.5V so your compressor(s) have been forced OFF.The system will return to normal operation once the vahical system voltage is reached 12.5V or the ignition is cycled.If this problem persist while the vehicle is running then.</string>
    <string name="error_68_low_voltage">Low Voltage Warning !</string>
    <string name="error_7_detail_discription">Check to see if the Sensor(s) is out of range, disconnected or damaged.</string>
    <string name="error_7_discription" />
    <string name="error_7_ride_height">Ride Height Sensor Warning!</string>
    <string name="error_89_detail_discription">1.Verify Ride Height Sensor mechanical linkage connections(inspect for damaged or disconnected linkage).\10 2. If you removed any of the sensor arms from the Ride Height Sensor during installation,you may have re-installed the arms in the wrong orientation.\10 3. Remount one or more of your Ride Height Sensors to achieve a minium of 1.0V variation from top to bottom of travel(you can use volt-meter to measure the sensor output voltage on the green wire from each of the sensors.)</string>
    <string name="error_89_discription">Ride Height Sensor travel is found to be too small on one or more corners of the vehicle:</string>
    <string name="error_89_height_sensor_travel_warnign">Sensor Travel Warning !</string>
    <string name="error_8_Communication">Communication Warning!</string>
    <string name="error_8_detail_discription">1. Check all wiring and connectors between ECU,TouchPad, and WIFI Receiver to assure proper connection.\10 2.Check pressure ssensor for failure.</string>
    <string name="error_8_discription">There is Communicaton Error between the ECU and the TouchPad or WiFi Receiver.</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_RHOS">Ride-Height-On-Start</string>
    <string name="label_RMA">RideMonitor Accuracy</string>
    <string name="label_RMM">RideMonitor Mode</string>
    <string name="label_TM">Trim Mode</string>
    <string name="label_TPM">Tank Pressure Mode</string>
    <string name="label_calibration">Calibration</string>
    <string name="label_ilevel_menu">iLevel Menu</string>
    <string name="label_password">Password</string>
    <string name="label_save_heights">Save Height</string>
    <string name="label_settings">Settings</string>
    <string name="man_cal_sensor_title">Manual Calibration w/Less Than 4 Sensors</string>
    <string name="manual7in2_msg">Manually adjust each Air Spring to the desired maximum vehicle height now.</string>
    <string name="manual_calibration">Manual Calibration</string>
    <string name="manual_calibration_msg">If this is a re-calibration (system was already was used) be aware that starting this process will lose all previously saved height information.Measure and note fender measurement of current heights before starting this procedure if desired.</string>
    <string name="manual_calibration_warning" />
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="one">1</string>
    <string name="onefivezero">150</string>
    <string name="onesevenfive">175</string>
    <string name="proceed">Proceed</string>
    <string name="rhos_text">Your system was shipped with Ride-Height-On-Start enabled (ON). You may choose to disable (OFF) or re-enable (ON) this feature. When this feature is ON, the system will automatically re-level the vehicle to Position #2 (Ride Height) every time that the ignition is switched ON. When this feature is OFF, the system will remain at the last height the vehicle was at when the ignition is switched ON.</string>
    <string name="ride_monitor_accuracy_body">adjusts the distance from selected height that the system will consider acceptable. Lower accuracy means that your vehicle won\'t stay as close to the selected height and will also make fewer adjustments (less air usage and less compressor run time). Higher accuracy means that your vehicle will stay very close to the selected height and will also make more frequent adjustments (more air usage and more compressor run time).</string>
    <string name="ride_monitor_accuracy_title">RideMonitor™ Mode Accuracy</string>
    <string name="start_calibration_detail">The vehicle must be on level ground with the wheels pointed straight ahead before proceeding. Leave the vehicle running to power the Compressor(s) during this procedure.</string>
    <string name="start_calibration_now">Start Calibration Now</string>
    <string name="start_calibration_warning">WARNING : The system will automatically Raise/Lower the vehicle in the next procedure. Remove all obstructions and KEEP CLEAR of vehicle until the calibration process is complete.</string>
</resources>