<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/container" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="2dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/txtTitle_AbortCaliberation" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/calibration_in_progress"/>
        <TextView android:textSize="18sp" android:textColor="@android:color/white" android:id="@+id/txtMSG_AbortCaliberation" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/calibration_in_progress_msg"/>
        <ProgressBar android:layout_gravity="center_horizontal" android:id="@+id/progressBar_AbortCalibration" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginBottom="3dp"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="22sp" android:textColor="@android:color/white" android:id="@+id/btnAbortCalibration" android:background="@drawable/red_button" android:layout_width="280dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/abort_calibration" android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <TextView android:layout_width="match_parent" android:layout_height="15dp"/>
    </LinearLayout>
</LinearLayout>
