<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/container" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="2dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/txtTitle_AutomaticCalibration" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/automatic_calibration"/>
        <TextView android:textSize="18sp" android:textColor="@android:color/white" android:id="@+id/txtMSG_AutomaticCalibration" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:text="@string/automatic_calibration_msg"/>
        <RelativeLayout android:id="@+id/rLayoutWarning_AutomaticCaliberation" android:background="@drawable/red_box" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="5dp" android:layout_marginRight="8dp" android:layout_marginBottom="5dp">
            <ImageView android:id="@+id/warningSymbol_AutomaticCalibration" android:background="@drawable/warning" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginTop="5dp"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="#ffd800" android:id="@+id/txtWarning_AutomaticCalibration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/automatic_calibration_warning" android:layout_toRightOf="@+id/warningSymbol_AutomaticCalibration"/>
            <View android:layout_width="wrap_content" android:layout_height="5dp" android:layout_below="@+id/txtWarning_AutomaticCalibration"/>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
            <ImageView android:background="@drawable/divider" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <RelativeLayout android:id="@+id/rLayoutProcedure_AutomaticCalibration" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="40dp">
                <TextView android:textSize="18sp" android:textColor="@android:color/white" android:id="@+id/txtProceed_AutomaticCalibration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/proceed" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
                <ImageButton android:id="@+id/img_btn_arrow" android:background="@drawable/right_arrow_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
