<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <RelativeLayout android:gravity="center_horizontal" android:id="@+id/rLayoutFor_AbortCalibrationError" android:background="@drawable/red_error_box" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/txt_ErrorName_AbortCalibrationError" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/error_67_high_voltage" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
        <TextView android:textColor="@android:color/white" android:id="@+id/txt_ErrorDiscription_AbortCalibrationError" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="5dp" android:layout_marginRight="15dp" android:text="@string/error_67_discription" android:layout_below="@+id/txt_ErrorName_AbortCalibrationError" android:layout_alignParentLeft="true" android:layout_alignParentRight="true"/>
        <TextView android:textColor="@android:color/white" android:id="@+id/txt_ErrorDetailDscription_AbortCalibrationError" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="15dp" android:layout_marginRight="15dp" android:text="@string/error_67_detail_discription" android:layout_below="@+id/txt_ErrorDiscription_AbortCalibrationError"/>
        <Button android:textColor="@android:color/white" android:id="@+id/btnCancle_AbortCalibrationError" android:background="@drawable/red_error_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="8dp" android:layout_marginRight="15dp" android:minHeight="48dp" android:text="Exit" android:layout_below="@+id/txt_ErrorDetailDscription_AbortCalibrationError" android:layout_centerHorizontal="true" style="?android:attr/buttonStyleSmall"/>
        <Button android:id="@+id/btn_MoreInfo1" android:background="@drawable/info_button" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="10dp" android:layout_marginTop="5dp" android:layout_marginRight="20dp" android:text="" android:layout_below="@+id/btnCancle_AbortCalibrationError" android:layout_alignParentRight="true" style="?android:attr/buttonStyleSmall"/>
    </RelativeLayout>
</RelativeLayout>
